<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/view_admin_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.333" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".667" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:text="@string/system_id_label"
                android:labelFor="@id/et_system_id"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_system_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="15"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="25"
                android:maxLines="1"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:labelFor="@id/et_system_password"
                android:paddingEnd="0dp"
                android:paddingStart="5dp"
                android:text="@string/system_password_label"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_system_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="15"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textSize="18sp"
                tools:ignore="TextFields"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_3"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"
            android:orientation="vertical"
            android:padding="2dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2">

            <EditText
                android:id="@+id/et_edit_instructions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/lightGrey"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/instructions_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="130"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/et_disclaimer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@color/lightGrey"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/disclaimer_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="310"
                android:padding="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_date"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_container1"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Date"/>

        <LinearLayout
            android:id="@+id/button_container1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/bt_save_config"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/save_config_button"
                android:onClick="updateConfig"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/bt_run"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/run_button"
                android:onClick="runProgram"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>


        <Button
            android:id="@+id/bt_update_files_list"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/get_pictures_button"
            android:onClick="getPicturesList"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="115dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/bt_update_files_list">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_file_names"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightGrey"
                android:padding="2dp" />

        </FrameLayout>

        <Button
            android:id="@+id/bt_set_picture"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/set_picture_button"
            android:onClick="downloadPicture"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1" />

        <LinearLayout
            android:id="@+id/button_container2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/bt_upload_data"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/upload_data_button"
                android:onClick="uploadDataToServer"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_clear_data"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/clear_data_button"
                android:onClick="clearAllData"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="115dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/button_container2">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/lightGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/tv_num_of_records"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Records: 14" />

                <View
                    android:id="@+id/records_border"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/rv_records"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_num_of_records" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_records"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/records_border" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/bt_exit_program"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/exit_program_button"
            android:onClick="exitProgram"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:padding="5dp"
            android:text="@string/date_of_drawing_label"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_date"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/cb_print_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/print_tickets_checkbox"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_date"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            />


    </android.support.constraint.ConstraintLayout>
</ScrollView>